# snack_error_quest

./: .gitignore  config.py  entrypoint.py  main.py  pyproject.toml
game_content/ядерный_похмельник/: история_вани.py
src/content/: __init__.py
src/content/ядерный_похмельник/: __init__.py  история_вани.py  история_мурада.py
src/core/: conditions.py  handlers.py  logger.py  models.py  player_progress.py
tg_quest/: __init__.py  engine.py  registry.py
tg_quest/models/: __init__.py  base.py  condition.py  errors.py  item.py  node.py  reaction.py  story.py
tg_quest/models/player/: node.py  progress.py  story.py
tg_quest/tg/: commands.py  errors.py  progress.py  quest.py  renderer.py  type_aliases.py
tg_quest/tg/handlers/: callback_service.py  node_flow_service.py
